Fix dashboard menu display on mobile platform(still working on it).

--- a/admin/src/scss/_forms.scss
+++ b/admin/src/scss/_forms.scss
@@ -10,8 +10,6 @@ textarea {
 
   border-radius: 2px;
 
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
