--- a/admin/src/scss/style.scss
+++ b/admin/src/scss/style.scss
@@ -59,8 +59,6 @@ a.balloon-button {
   /** 修正ie中文不对齐 */
   zoom:1;
   
-  -moz-border-radius: 30px;
-  -webkit-border-radius: 30px;
   border-radius: 30px;
   white-space: nowrap;
 }
@@ -71,7 +69,7 @@ a.button:hover, a.balloon-button:hover {
   text-decoration: none;
 }
 
-
+@import "vars";
 @import "forms";
 @import "buttons";
 @import "messages";
@@ -99,8 +97,6 @@ a.button:hover, a.balloon-button:hover {
   z-index: 10;
   text-align: center;
 
-  -moz-border-radius: 0;
-  -webkit-border-radius: 0;
   border-radius: 0;
 }
 
